# compression-sorts

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gen_flame_graph.sh  requirements.txt  research.ipynb  setup.sh
benchmark/: CMakeLists.txt  main.cpp
clickhouse_tests/: benchmark.py  benchmark_utils.py  main.py
generator/: CMakeLists.txt  download_data.py  download_data.sh  main.cpp  urls.txt
libs/: CMakeLists.txt
libs/benchmark/: CMakeLists.txt
libs/benchmark/include/compression_sorts/: benchmark.hpp  statistics_saver.hpp  test_results.hpp  tests.hpp
libs/benchmark/src/: benchmark.cpp  statistics_saver.cpp  test_results.cpp  tests.cpp
libs/data/: CMakeLists.txt
libs/data/include/compression_sorts/: block.hpp  column_integers.hpp  column_interface.hpp  column_strings.hpp  online_compression_calculator_interface.hpp  stupid_compression_calculator.hpp
libs/data/src/: block.cpp  column_strings.cpp
libs/data/tests/: CMakeLists.txt  block_test.cpp  column_integers_test.cpp  column_test.cpp
libs/generator/: CMakeLists.txt
libs/generator/include/compression_sorts/: batches.hpp  generators.hpp
libs/generator/src/: batches.cpp  generators.cpp
libs/permute_algorithms/: CMakeLists.txt
libs/permute_algorithms/include/compression_sorts/: identity.hpp  interfaces.hpp  lexicographic_sort.hpp  local_optimizations.hpp  multiple_lists.hpp  permute_interface.hpp  shuffle.hpp  sort.hpp  suffix_array_greedy.hpp
libs/permute_algorithms/src/: identity.cpp  lexicographic_sort.cpp  local_optimizations.cpp  multiple_lists.cpp  shuffle.cpp  suffix_array_greedy.cpp
libs/util/: CMakeLists.txt
libs/util/include/compression_sorts/: filesystem.hpp  generator.hpp  get_all_files.hpp  lz4.hpp  path.hpp  permutation.hpp  random.hpp  range.hpp  read_data.hpp  serialize_data.hpp  sparse_table.hpp  split.hpp  suffix_array.hpp  time.hpp
libs/util/src/: filesystem.cpp  generator.cpp  get_all_files.cpp  lz4.cpp  permutation.cpp  random.cpp  range.cpp  read_data.cpp  serialize_data.cpp  split.cpp  suffix_array.cpp  time.cpp
libs/util/tests/: CMakeLists.txt  lz4_test.cpp  permutation_test.cpp  suffix_array_test.cpp
test_data/: generate_test_data.py
tests_data/: generate_tests_data.py
tests_results/: algorithms_results.csv  clickhouse_tests.csv  tests_info.csv
